<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.bookmypacket.bmpclub.ui.BMPJobsActivity">
    <!--<item-->
    <!--android:id="@+id/action_faq"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_faq"-->
    <!--app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_tnc"
        android:orderInCategory="100"
        android:title="@string/tncText"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        android:title="@string/ppText"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"/>
</menu>
