<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bookmypacket.bmpclub.BMPSplash"
    tools:showIn="@layout/activity_bmpsplash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="?attr/actionBarSize"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bmp_logo_description"
        android:src="@drawable/bmp_log_bg"/>

    <TextView
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_cards"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/button_elevation"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/icons"/>

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_cards"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/button_elevation"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/icons"/>

    <TextView
        android:id="@+id/tv_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_cards"
        android:gravity="center"
        android:text="@string/tncText"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_cards"
        android:gravity="center"
        android:text="@string/ppText"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</LinearLayout>
