<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bookmypacket.bmpclub.ui.RegisterStep1Activity"
    tools:showIn="@layout/activity_register_step1">


    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_continue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lo_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_cards">

                <EditText
                    android:id="@+id/et_mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_hint"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lo_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_mobileno"
                android:layout_marginTop="@dimen/margin_cards">

                <EditText
                    android:id="@+id/et_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_hint"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lo_mName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_fname"
                android:layout_marginTop="@dimen/margin_cards">

                <EditText
                    android:id="@+id/et_middleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_middle_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lo_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_mName"
                android:layout_marginTop="@dimen/margin_cards">

                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lo_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_lname"
                android:layout_marginTop="@dimen/margin_cards">

                <AutoCompleteTextView
                    android:id="@+id/et_emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/tnc_accepted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_email"
                android:text="@string/accept_tnc"
                android:textAppearance="?android:textAppearanceLarge" />


        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_cards"
        android:background="@color/colorAccent"
        android:elevation="@dimen/button_elevation"
        android:gravity="center"
        android:text="@string/btn_continue_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentBottom="true"
        android:textColor="@color/icons"
        android:drawableEnd="@drawable/ic_btn_next"
        android:drawableRight="@drawable/ic_btn_next"/>

</RelativeLayout>